@@ -1,3 +1,8 @@
+2007-02-11 (later) Stuart Brorson   <sdb@cloud9.net>
+	* scheme/gnet-spice-sdb.scm, scheme/gnetlist.scm: Changed 
+	string-pad-right to safe-string-head per suggestion from Jeff
+	Mallatt.  Added safe-string-head to gnetlist.scm.
+	
 2007-02-11 Stuart Brorson   <sdb@cloud9.net>
 	* scheme/gnet-spice-sdb.scm: Incorporated patch from Jeff Mallatt
 	enabling SPICE netlisting of slotted parts.
